# ufc-predictor

./: README.md  pyproject.toml
scrapper/: event_scrapper.py  scrapper.py
